--- a/app/src/main/res/layout/fragment_my_pools.xml
+++ b/app/src/main/res/layout/fragment_my_pools.xml
@@ -1,13 +1,12 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.plego.wagerocity.android.fragments.MyPoolsFragment">
 
     <ListView
         android:id="@+id/listview_my_pools"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        />
+        android:layout_height="wrap_content" />
 
 </FrameLayout>
